--- a/card1.html
+++ b/card1.html
@@ -5,7 +5,10 @@
       .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
-        width: 40%;
+        width: 15%;
+        padding: 2px 16px;
+        padding-top: 20px;
+        background-color: bisque;
       }
 
       .card:hover {
@@ -13,17 +16,27 @@
       }
 
       .container {
-        padding: 2px 16px;
+        padding: 2px 2px;
+      }
+      img {
+        height: 40vh;
+        width: 15vw;
       }
     </style>
   </head>
-  <body>
-    <div class="card">
-      <img src="as.jpg" alt="img" />
-      <div class="container">
-        <h4><b>def</b></h4>
-        <p>Engineer</p>
+  <body bgcolor="grey">
+    <center
+      style="
+    padding-top:  150px;
+"
+    >
+      <div class="card">
+        <img src="photo-1497316730643-415fac54a2af.jpeg" alt="img" />
+        <div class="container">
+          <h4><b>Abcd</b></h4>
+          <p>Engineer</p>
+        </div>
       </div>
-    </div>
+    </center>
   </body>
 </html>
