--- a/card1.html
+++ b/card1.html
@@ -22,19 +22,25 @@
         height: 40vh;
         width: 15vw;
       }
+      .title {
+        padding-top: 15px;
+        font-weight: bold;
+        font-size: 15;
+      }
+      .desgn {
+        font-weight: normal !important;
+      }
     </style>
   </head>
   <body bgcolor="grey">
-    <center
-      style="
-    padding-top:  150px;
-"
-    >
+    <center style="padding-top:  150px;">
       <div class="card">
         <img src="photo-1497316730643-415fac54a2af.jpeg" alt="img" />
         <div class="container">
-          <h4><b>Abcd</b></h4>
-          <p>Engineer</p>
+          <div class="title">
+            ABCD
+            <p class="desgn">Engineer</p>
+          </div>
         </div>
       </div>
     </center>
