removed p tag and used div

--- a/card3.html
+++ b/card3.html
@@ -19,6 +19,7 @@
         .title {
             color: black;
             font-size: 18px;
+            padding: 10px;
         }
 
 
@@ -56,7 +57,7 @@
             padding-top: 10px;
         }
         .name{
-            padding-top:10px;
+            padding:10px;
             font-weight: bolder;
             font-size: 30px;
         }
@@ -70,8 +71,8 @@
 <div class="card">
     <img src="images/ru79eu.png" alt="alexa" class="avatar" id="img">
     <div class="name">Alexndra Dadario</div>
-    <p class="title">Parker Industries</p>
-    <p class="round3">UX DESIGNER</p>
+    <div class="title">Parker Industries</div>
+    <div class="round3">UX DESIGNER</div>
     <div style="text-align:center;background-color: lightgray ; padding-top: 10px; color: grey" >
         <h4>USUALLY COLLABORATED WITH</h4>
         <img src="images/profile1.jpeg" class="dot"></img>
