removed center close tag

--- a/card1.html
+++ b/card1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card</title>
     <style>
       .card {
@@ -38,21 +38,18 @@
         font-weight: normal !important;
         padding-top: 10px;
         padding-bottom: 5px;
-       
-
       }
     </style>
   </head>
   <body bgcolor="grey">
-      <div class="card">
-        <img src="photo-1497316730643-415fac54a2af.jpeg" alt="img" />
-        <div class="container">
-          <div class="title">
-            ABCD
-            <div class="desgn">Engineer</div>
-          </div>
+    <div class="card">
+      <img src="photo-1497316730643-415fac54a2af.jpeg" alt="img" />
+      <div class="container">
+        <div class="title">
+          ABCD
+          <div class="desgn">Engineer</div>
         </div>
       </div>
-    </center>
+    </div>
   </body>
 </html>
