removed h4 tag and sup tag

--- a/card3.html
+++ b/card3.html
@@ -74,12 +74,12 @@
     <div class="title">Parker Industries</div>
     <div class="round3">UX DESIGNER</div>
     <div style="text-align:center;background-color: lightgray ; padding-top: 10px; color: grey" >
-        <h4>USUALLY COLLABORATED WITH</h4>
+        <div style="font-size:17px;font-weight:bold">USUALLY COLLABORATED WITH</div>
         <img src="images/profile1.jpeg" class="dot"></img>
         <img src="images/profile2.jpeg" class="dot"></img>
         <img src="images/profile3.jpeg" class="dot"></img>
         <img src="images/profile4.jpeg" class="dot"></img>
-        <sup class="dot"> +2</sup>
+        <div class="dot" style="position: relative;bottom:10px"> +2</div>
 
     </div>
     <div style="margin: 30px 0;color: lightgrey; display: flex; justify-content: space-around;" class="ima">
