--- a/card1.html
+++ b/card1.html
@@ -1,11 +1,18 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card</title>
     <style>
       .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
-        width: 40%;
+        width: 15%;
+        padding: 2px 16px;
+        padding-top: 20px;
+        background-color: bisque;
+        position: fixed;
+        left: 40%;
+        top: 20%;
       }
 
       .card:hover {
@@ -13,17 +20,41 @@
       }
 
       .container {
-        padding: 2px 16px;
+        padding: 2px 2px;
+      }
+      img {
+        height: 40vh;
+        width: 15vw;
+      }
+      .title {
+        padding-top: 15px;
+        font-weight: bold;
+        font-size: 15;
+        position: relative;
+        left: 40%;
+        top: 20%;
+      }
+      .desgn {
+        font-weight: normal !important;
+        padding-top: 10px;
+        padding-bottom: 5px;
       }
     </style>
-    <script></script>
+    <script>
+      function a() {
+        var a = document.getElementsByClassName("desgn");
+        a[0].innerHTML = "Developer";
+      }
+    </script>
   </head>
-  <body>
+  <body bgcolor="grey">
     <div class="card">
-      <img src="as.jpg" alt="img" />
+      <img src="photo-1497316730643-415fac54a2af.jpeg" alt="img" />
       <div class="container">
-        <h4><b>Ab­­­­­­­­cd</b></h4>
-        <p>Engineer</p>
+        <div class="title">
+          ABCD
+          <div class="desgn" onmouseover="a()">Engineer</div>
+        </div>
       </div>
     </div>
   </body>
