--- a/form.html
+++ b/form.html
@@ -35,7 +35,11 @@
         ><br />
         <label>Description:</label><br />
         <textarea name="desc"></textarea><br />
-        <input type="submit" value="Submit" />
+        <input
+          type="submit"
+          value="Submit"
+          style="position:relative;top:10px"
+        />
       </form>
     </div>
   </body>
